--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="..\..\libs\common\FPGA\FPGAMath.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\Sound.cpp" />
     <ClCompile Include="..\..\libs\common\Hardware\Timer.cpp" />
+    <ClCompile Include="..\..\libs\common\Log.cpp" />
     <ClCompile Include="..\..\libs\common\Menu\Menu.cpp" />
     <ClCompile Include="..\..\libs\common\Menu\MenuItems.cpp" />
     <ClCompile Include="..\..\libs\common\Menu\MenuItemsGraphics.cpp" />
@@ -171,7 +172,6 @@
     <ClCompile Include="..\..\Device53\src\libs\usbd_conf.cpp" />
     <ClCompile Include="..\..\Device53\src\libs\usbd_desc.c" />
     <ClCompile Include="..\..\Device53\src\libs\usbh_conf.cpp" />
-    <ClCompile Include="..\..\Device53\src\Log.cpp" />
     <ClCompile Include="..\..\Device53\src\main.cpp" />
     <ClCompile Include="..\..\Device53\src\Menu\Pages\HelpContent.cpp" />
     <ClCompile Include="..\..\Device53\src\Menu\Pages\PageChannels.cpp" />
@@ -454,6 +454,7 @@
     <ClInclude Include="..\..\libs\common\FPGA\FPGAMath.h" />
     <ClInclude Include="..\..\libs\common\Hardware\Sound.h" />
     <ClInclude Include="..\..\libs\common\Hardware\Timer.h" />
+    <ClInclude Include="..\..\libs\common\Log.h" />
     <ClInclude Include="..\..\libs\common\Menu\Menu.h" />
     <ClInclude Include="..\..\libs\common\Menu\MenuDrawing.h" />
     <ClInclude Include="..\..\libs\common\Menu\MenuItems.h" />
@@ -494,7 +495,6 @@
     <ClInclude Include="..\..\Device53\src\libs\usbd_conf.h" />
     <ClInclude Include="..\..\Device53\src\libs\usbd_desc.h" />
     <ClInclude Include="..\..\Device53\src\libs\usbh_conf.h" />
-    <ClInclude Include="..\..\Device53\src\Log.h" />
     <ClInclude Include="..\..\Device53\src\main.h" />
     <ClInclude Include="..\..\Device53\src\Menu\MenuPagesNames.h" />
     <ClInclude Include="..\..\Device53\src\Menu\Pages\HelpContent.h" />
