--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -200,7 +200,6 @@
     <ClCompile Include="..\..\Device53\src\Settings\SettingsMemory.cpp" />
     <ClCompile Include="..\..\Device53\src\Settings\SettingsService.cpp" />
     <ClCompile Include="..\..\Device53\src\Settings\SettingsTime.cpp" />
-    <ClCompile Include="..\..\Device53\src\stub.cpp" />
     <ClCompile Include="..\..\Device53\src\Tables.cpp" />
     <ClCompile Include="..\..\Device53\src\Utils\ProcessingSignal.cpp" />
     <ClCompile Include="..\..\Device53\src\VCP\SCPI\channelSCPI.cpp" />
@@ -455,6 +454,7 @@
     <ClInclude Include="..\..\libs\common\Hardware\Sound.h" />
     <ClInclude Include="..\..\libs\common\Hardware\Timer.h" />
     <ClInclude Include="..\..\libs\common\Log.h" />
+    <ClInclude Include="..\..\libs\common\Menu\commonMenu.h" />
     <ClInclude Include="..\..\libs\common\Menu\Menu.h" />
     <ClInclude Include="..\..\libs\common\Menu\MenuDrawing.h" />
     <ClInclude Include="..\..\libs\common\Menu\MenuItems.h" />
@@ -462,6 +462,7 @@
     <ClInclude Include="..\..\libs\common\Menu\Pages\commonPages.h" />
     <ClInclude Include="..\..\libs\common\Menu\Pages\Definition.h" />
     <ClInclude Include="..\..\libs\common\Settings\commonSettings.h" />
+    <ClInclude Include="..\..\libs\common\stub.h" />
     <ClInclude Include="..\..\libs\common\Utils\CommonFunctions.h" />
     <ClInclude Include="..\..\libs\common\Utils\Map.h" />
     <ClInclude Include="..\..\libs\common\Utils\Math.h" />
