--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -1641,54 +1641,54 @@
           <GroupName>VCP/SCPI</GroupName>
           <Files>
             <File>
-              <FileName>commonSCPI.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\VCP\SCPI\commonSCPI.h</FilePath>
-            </File>
-            <File>
-              <FileName>controlSCPI.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\VCP\SCPI\controlSCPI.h</FilePath>
-            </File>
-            <File>
-              <FileName>SCPI.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\VCP\SCPI\SCPI.h</FilePath>
-            </File>
-            <File>
               <FileName>channelSCPI.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\VCP\SCPI\channelSCPI.cpp</FilePath>
+              <FilePath>..\libs\common\VCP\SCPI\channelSCPI.cpp</FilePath>
             </File>
             <File>
               <FileName>commonSCPI.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\VCP\SCPI\commonSCPI.cpp</FilePath>
+              <FilePath>..\libs\common\VCP\SCPI\commonSCPI.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>commonSCPI.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\VCP\SCPI\commonSCPI.h</FilePath>
             </File>
             <File>
               <FileName>controlSCPI.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\VCP\SCPI\controlSCPI.cpp</FilePath>
+              <FilePath>..\libs\common\VCP\SCPI\controlSCPI.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>controlSCPI.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\VCP\SCPI\controlSCPI.h</FilePath>
             </File>
             <File>
               <FileName>displaySCPI.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\VCP\SCPI\displaySCPI.cpp</FilePath>
+              <FilePath>..\libs\common\VCP\SCPI\displaySCPI.cpp</FilePath>
             </File>
             <File>
               <FileName>SCPI.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\VCP\SCPI\SCPI.cpp</FilePath>
+              <FilePath>..\libs\common\VCP\SCPI\SCPI.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>SCPI.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\VCP\SCPI\SCPI.h</FilePath>
             </File>
             <File>
               <FileName>tbaseSCPI.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\VCP\SCPI\tbaseSCPI.cpp</FilePath>
+              <FilePath>..\libs\common\VCP\SCPI\tbaseSCPI.cpp</FilePath>
             </File>
             <File>
               <FileName>trigSCPI.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\VCP\SCPI\trigSCPI.cpp</FilePath>
+              <FilePath>..\libs\common\VCP\SCPI\trigSCPI.cpp</FilePath>
             </File>
           </Files>
         </Group>
