--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -442,6 +442,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Device53\src\Menu\Pages\PageChannels.h" />
+    <ClInclude Include="..\..\Device53\src\Menu\Pages\PageDebug.h" />
+    <ClInclude Include="..\..\Device53\src\Menu\Pages\PageTrig.h" />
     <ClInclude Include="..\..\libs\common\commonDefines.h" />
     <ClInclude Include="..\..\libs\common\Display\Colors.h" />
     <ClInclude Include="..\..\libs\common\Display\DisplayPrimitives.h" />
