--- a/sources/_VS/Device53/Device53.vcxproj
+++ b/sources/_VS/Device53/Device53.vcxproj
@@ -80,7 +80,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>USE_HAL_DRIVER;STM32F207xx;WIN32;S8_53;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4514;4820</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4068;4514;4820</DisableSpecificWarnings>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -170,7 +170,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Device53\src\libs\usbd_cdc_interface.cpp" />
     <ClCompile Include="..\..\Device53\src\libs\usbd_conf.cpp" />
-    <ClCompile Include="..\..\Device53\src\libs\usbd_desc.c" />
+    <ClCompile Include="..\..\Device53\src\libs\usbd_desc.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\..\Device53\src\libs\usbh_conf.cpp" />
     <ClCompile Include="..\..\Device53\src\main.cpp" />
     <ClCompile Include="..\..\Device53\src\Menu\Pages\HelpContent.cpp" />
