--- a/sources/_VS/Device53/Device53.vcxproj.filters
+++ b/sources/_VS/Device53/Device53.vcxproj.filters
@@ -950,6 +950,9 @@
     <ClInclude Include="..\..\Device53\src\Menu\Pages\PageDebug.h">
       <Filter>Menu\Pages</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Device53\src\Menu\Pages\PageTime.h">
+      <Filter>Menu\Pages</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Device53\src\libs\startup_stm32f207xx.s">
