--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -841,6 +841,11 @@
               <FileType>8</FileType>
               <FilePath>.\src\libs\usbh_conf.cpp</FilePath>
             </File>
+            <File>
+              <FileName>interrupts.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\libs\interrupts.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
