Loader Компилируется с отключенными предупреждениями и работает

--- a/sources/Loader53/Loader53.uvprojx
+++ b/sources/Loader53/Loader53.uvprojx
@@ -321,7 +321,7 @@
             <PlainCh>0</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
-            <wLevel>2</wLevel>
+            <wLevel>1</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>1</uSurpInc>
             <uC99>1</uC99>
@@ -616,6 +616,21 @@
               <FileType>5</FileType>
               <FilePath>..\libs\common\Hardware\Timer.h</FilePath>
             </File>
+            <File>
+              <FileName>it.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\it.h</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f2xx_it.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\stm32f2xx_it.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f2xx_it.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\stm32f2xx_it.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -642,16 +657,6 @@
               <FilePath>.\src\libs\stm32f2xx_hal_msp.cpp</FilePath>
             </File>
             <File>
-              <FileName>stm32f2xx_it.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\libs\stm32f2xx_it.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>stm32f2xx_it.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\libs\stm32f2xx_it.h</FilePath>
-            </File>
-            <File>
               <FileName>system_stm32f2xx.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\libs\system_stm32f2xx.c</FilePath>
@@ -665,11 +670,6 @@
               <FileName>usbh_conf.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\libs\usbh_conf.h</FilePath>
-            </File>
-            <File>
-              <FileName>interrupts.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\libs\interrupts.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -940,6 +940,21 @@
               <FileName>FPGATypes.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\FPGA\FPGATypes.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>stm32f207</GroupName>
+          <Files>
+            <File>
+              <FileName>Timer207.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\stm32\207\Timer207.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Timer207.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\stm32\207\Timer207.h</FilePath>
             </File>
           </Files>
         </Group>
